Ingress/PodAIngress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: podaingress
  name: podaingress
spec:
  replicas: 3
  selector:
    matchLabels:
      app: podaingress
  template:
    metadata:
      labels:
        app: podaingress
    spec:
      containers:
      - image: gcr.io/google-samples/hello-app:1.0
        name: hello
