Ingress/PodBIngress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: podbingress 
  name: podbingress
spec:
  replicas: 3
  selector:
    matchLabels:
      app: podbingress
  template:
    metadata:
      labels:
        app: podbingress
    spec:
      containers:
      - image: gcr.io/google-samples/hello-app:1.0
        name: hello
