Ingress/ServiceBIngress.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: servicebingress
  name: servicebingress
spec:
  ports:
  - protocol: TCP
    port: <Service Port>
    targetPort: 8080
  selector:
    app: <A Service Deployment Name>
