Ingress/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  ingressClassName: nginx
  rules:
    - host: k8s.ingress.com
      http:
        paths:
        - path: /age
          pathType: Prefix
          backend:
            service:
              name: <A Service Name>
              port:
                number: <A Service Port>
    - host: k8s.ingress.com
      http:
        paths:
        - path: /con
          pathType: Prefix
          backend:
            service:
              name: <B Service Name>
              port:
                number: <B Service Port>
